ALL PROGRESS IS NOW IN 'PROJECT'

--- a/Team.ipynb
+++ b/Team.ipynb
@@ -28,7 +28,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -57,7 +57,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -101,7 +101,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -132,7 +132,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -176,7 +176,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 152
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -184,12 +184,28 @@
      "input": [
       "# Test the scraping and construct methedology\n",
       "final = player_final('Chris', 'Paul')\n",
-      "print final"
+      "print final[1]"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 153
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{'content': {2007: ['Chris Paul', '2007', 'NOR', 'PG', '64', '36.8', '23.02', '53.7', '17.3', '47.85', '13.54', '2.6', '11.3', '6.9', '21.22', '7.82', '7.54', '21.94', '23.73'], 2008: ['Chris Paul', '2008', 'NOR', 'PG', '80', '37.6', '25.73', '57.6', '18.7', '55.60', '12.08', '2.4', '10.3', '6.2', '27.89', '11.34', '11.43', '28.39', '30.62'], 2009: ['Chris Paul', '2009', 'NOR', 'PG', '78', '38.5', '27.52', '59.9', '14.3', '50.10', '13.46', '2.8', '14.6', '8.7', '30.45', '12.95', '11.96', '29.96', '32.78'], 2010: ['Chris Paul', '2010', 'NOR', 'PG', '45', '38.1', '22.22', '58.4', '12.4', '57.65', '13.45', '1.4', '11.9', '6.5', '25.60', '10.42', '9.88', '23.71', '26.56'], 2011: ['Chris Paul', '2011', 'NOR', 'PG', '80', '36.1', '21.07', '57.7', '17.9', '61.34', '13.88', '1.6', '12.3', '6.9', '23.08', '9.74', '9.03', '23.70', '26.18'], 2012: ['Chris Paul', '2012', 'LAC', 'PG', '60', '36.4', '24.27', '58.1', '17.9', '47.30', '10.80', '2.3', '9.4', '5.8', '24.47', '9.86', '10.09', '27.02', '29.56'], 2013: ['Chris Paul', '2013', 'LAC', 'PG', '70', '33.4', '22.64', '59.4', '21.8', '36.95', '8.66', '2.8', '10.5', '6.7', '23.79', '10.19', '9.85', '26.45', '28.82']}, 'header': [u'Player Name', u'Yr', u'Tm', u'Pos', u'GP', u'Min', u'USG', u'TS%', u'%Ast', u'AR', u'TOR', u'ORR', u'DRR', u'TRR', u'EFF', u'WS', u'AWS', u'PER', u'APER']}\n"
+       ]
+      }
+     ],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
