Some analysis and attempt at network

--- a/Process.ipynb
+++ b/Process.ipynb
@@ -96,6 +96,21 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Modeling"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The first model our team constucted was intentionally simplistic in nature. Specifically, the model examines past data (range depending on information availablilty) to establish a relationship between the relative ranks of the teams playing and the score-difference outcome of games played the following year."
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
